--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,10 +48,10 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 
